# coqword

./: .gitignore  AUTHORS  CHANGELOG.md  Makefile  Makefile.common  README.md  _CoqProject  coq-mathcomp-word.opam  descr  dune-project  opam  shell.nix
.circleci/: config.yml
.github/workflows/: ci.yml
src/: dune  ssrZ.v  ssrring.v  word.v  word_ssrZ.v
